[tool.poetry]
name = "home-work-with-poetry"
version = "0.1.0"
description = ""
authors = ["Oksana Bondareva <xanka359@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1"
selene = "2.0.0rc9"
pylint = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
